solved spacing top navbar

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -168,7 +168,7 @@ p#notice{
 .info_container.fixed{
   padding-left: 8%;
   padding-bottom: 1em;
-  height: 6em;
+  height: 6.9em;
   margin-top: 6em;
 }
 
